* fix issues with room list in firefox 2 (didn't detect console.log properly, again) * New JS func: WCLog * some HTML validation fixes (remove align="center", <br /> -> <br>) * known issue: FF2 won't hide handle overflow text in table cells. I do have some idea of how to work around

--- a/static/webcit.css
+++ b/static/webcit.css
@@ -431,6 +431,13 @@ var sub {
 #loading {
     background-color: white;
 }
+/* Message list in mailbox/summaryview */
+.table-row {
+    background-color: white;
+}
+.table-alt-row {
+      background-color: #DDDDDD;
+}
 /* Links */
 
 a {	text-decoration: none; }
@@ -499,14 +506,16 @@ body, #global {
 	z-index: 2;
 	padding: 3px;
 }
-#hellomsg {
+#hellomsg, .fmout, .nomsgs {
     text-align: center;
 }
 #login_screen, #logout_screen {
 	margin: 0;
 	padding: 3% 6% 3% 6%;
 }
-
+#convlogin, #validate {
+    text-align: center;
+}
 #iconbar, #banner, #content, #message_list_hdr, #message_list, #preview_pane  {
 	text-align: left;
 }
@@ -564,6 +573,10 @@ body, #global {
 }
 #message_list_body {
     background-color: white !important;
+}
+#message_list_body > tr > td {
+    overflow-y: hidden;
+    overflow-x: hidden; /* stop long subjects overflowing */
 }
 .col1 {
     width: 50%;
@@ -1436,11 +1449,8 @@ li.event_unread span, a.event_read_title {
       vertical-align: middle;
       border: none;
 }
-.table-row {
-    background-color: white;
-}
-.table-alt-row {
-      background-color: #DDDDDD;
+.table-row, .table-alt-row {
+    width: 100%;
 }
 
 .stickynote_outer {
